# TextBookAi

./: .gitignore  DBsetup.md  Dockerfile  README.md  db.py  main.py  pdf.py  pyproject.toml  requirements.txt
static/css/: auth.css  index.css  notes.css
templates/: index.html  library.html  login.html  notes.html  quiz.html  signup.html  subtopic.html  topic.html  topic_notes.html  view_notes.html
