[tool.poetry]
name = "textbook-ai"
version = "0.1.0"
description = ""
authors = ["them1n9 <iamanidiotm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.43.0"
python-dotenv = "^1.0.1"
google-generativeai = "^0.7.2"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
pypdf2 = "^3.0.1"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
psycopg2 = "^2.9.9"
fastapi-login = "^1.10.2"
fastapi-session = "0.2.7"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
